Animation overlap issue solved

--- a/css/weather.css
+++ b/css/weather.css
@@ -70,16 +70,26 @@ svg text {
 
 /*Animations*/
 
-.view-animate {
-  /*padding:10px;*/
+.view-animate-container {
+  position:relative;
+  /*height:100px!important;
+  background:white;
+  border:1px solid black;
+  height:40px;*/
+  overflow:hidden;
 }
 
-.view-animate.ng-enter, .view-animate.ng-leave {
+.view-animate {
+  /*padding:10px;*/
+    
+}
+
+.view-animate.ng-enter {
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s;
 
     display:block;
     width:100%;
-
+    
     opacity: 1;
 }
 
@@ -98,8 +108,7 @@ svg text {
     opacity: 1;
 }
 .view-animate.ng-leave.ng-leave-active {
-  /*left:-100%;*/
-    
+  /*left:-100%;*/    
     opacity: 1;
 }
 
